added font family

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#1D5591">
-    <title>Emtatx landing page</title>
+    <title>Crayond'd</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="plugin/favicon.png">
@@ -33,17 +33,17 @@
 <body>
     <section class="first_section">
         <div class="container">
-            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_text_1">
+            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_text_1 fontGraphikBold">
                 <p>Bring your <br /> Product Idea to Life</p>
             </div>
             <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
                 -----------------------------------------------------------------------------------
             </div> -->
-            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_text_2">
+            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_text_2 fontLatoRegular">
                 <p>We have starting founder and businesses to craft their ideas to <br />world-class products</p>
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner__button_div">
-                <button class="banner_button">SCREW IT, LET'S DO IT! &nbsp <span>  </span></button>
+                <button class="banner_button fontLatoBlack">SCREW IT, LET'S DO IT! &nbsp <span>  </span></button>
             </div>
         </div>
     </section>
@@ -53,10 +53,10 @@
     <section class="who_you_are">
         <div class="container">
             <div class="text">
-                <h1>
+                <h1 class="fontGraphikSemibold">
                     Who you are?
                 </h1>
-                <p class="banner--text">
+                <p class="banner--text fontLatoRegular">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit illum aperiam.<br /> ea exercitationem .
                 </p> 
             </div>
@@ -66,8 +66,8 @@
                         <div class="card--">
                             <div class="card--body">
                                 <i class="fa fa_icon fa-lightbulb-o" aria-hidden="true"></i>
-                                <h2 class="card--head">An Aspiring <br />enterpreneur</h2>
-                                <p class="card--text">
+                                <h2 class="card--head fontGraphikBold">An Aspiring <br />enterpreneur</h2>
+                                <p class="card--text fontLatoRegular">
                                 Some quick example text to build on the card title
                                 and make up the bulk of the card's content.
                                 </p>
@@ -106,6 +106,7 @@
         </div>
     </section>
     <section class="why_us">
+      <div class="container-fluid container_bg_section1">
         <div class="container">
             <div class="text">
                 <h1>
@@ -115,6 +116,8 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit illum aperiam.<br /> ea exercitationem .
                 </p> 
             </div>
+        </div>
+        <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
@@ -138,6 +141,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+      </div>
+      <div class="container-fluid container_bg_section2">
+        <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="img_section">
@@ -161,6 +168,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+      </div>
+      <div class="container-fluid container_bg_section1">
+        <div class="container">        
             <div class="row">
                 <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
@@ -184,6 +195,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+      </div>
+      <div class="container-fluid container_bg_section2">
+        <div class="container">                
             <div class="row">
                 <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="img_section">
@@ -208,15 +223,17 @@
                 </div>
             </div>
         </div>
+      </div>
+     </div>
     </section>
     <section class="our_secrets">
         <div class="container">
             <div class="text">
-                <h1>
-                    Why us?
+                <h1 class="fontGraphikBold">
+                        Our secrets.
                 </h1>
                 <p class="banner--text">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit illum aperiam.<br /> ea exercitationem .
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br/> tempor incididunt .
                 </p> 
             </div>
             <div class="row">
