--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
     <![endif]-->
 </head>
 <body>
-    <section class="first_section">
+    <section class="first_section" style="height: 50vh;margin-bottom: 50vh;">
+        <div class="container-fluid" style="padding: 0px;">
+            <video autoplay loop style="max-width: 100%;height:100%;">
+                <source src="http://videos.ctfassets.net/xny2w179f4ki/624R5hsLvnQ36lRNjssvOB/5e49f2cc809333610c32f8b941761ce2/Homepage_Airplane_Guy_Working_1.mp4" type="video/mp4">
+            </video>                      
+        </div>
+    </section>
+    <section class="first_section header_text">
         <div class="container">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_text_1 fontGraphikBold">
                 <p>Bring your <br /> Product Idea to Life</p>
@@ -66,7 +73,7 @@
                         <div class="card--">
                             <div class="card--body">
                                 <i class="fa fa_icon fa-lightbulb-o" aria-hidden="true"></i>
-                                <h2 class="card--head fontGraphikBold">An Aspiring <br />enterpreneur</h2>
+                                <h2 class="card--head fontGraphikSemibold">An Aspiring <br />enterpreneur</h2>
                                 <p class="card--text fontLatoRegular">
                                 Some quick example text to build on the card title
                                 and make up the bulk of the card's content.
@@ -79,8 +86,8 @@
                         <div class="card--">
                             <div class="card--body">
                                 <i class="fa fa_icon fa-archive" aria-hidden="true"></i>
-                                <h2 class="card--head">A Startup <br />Owner</h2>
-                                <p class="card--text">
+                                <h2 class="card--head fontGraphikSemibold">A Startup <br />Owner</h2>
+                                <p class="card--text fontLatoRegular">
                                 Some quick example text to build on the card title
                                 and make up the bulk of the card's content.
                                 </p>
@@ -92,8 +99,8 @@
                         <div class="card--">
                             <div class="card--body">
                                 <i class="fa fa_icon fa-cubes" aria-hidden="true"></i>
-                                <h2 class="card--head">An Established <br />enterprise</h2>
-                                <p class="card--text">
+                                <h2 class="card--head fontGraphikSemibold">An Established <br />enterprise</h2>
+                                <p class="card--text fontLatoRegular">
                                 Some quick example text to build on the card title
                                 and make up the bulk of the card's content.
                                 </p>
@@ -109,10 +116,10 @@
       <div class="container-fluid container_bg_section1">
         <div class="container">
             <div class="text">
-                <h1>
+                <h1 class="fontGraphikSemibold">
                     Why us?
                 </h1>
-                <p class="banner--text">
+                <p class="banner--text fontLatoRegular">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit illum aperiam.<br /> ea exercitationem .
                 </p> 
             </div>
@@ -124,10 +131,10 @@
                         <i class="fa fa_icon fa-lightbulb-o" aria-hidden="true"></i>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <h1>Bulid products that customers love.</h1>
+                        <h1 class="fontGraphikSemibold">Bulid products that customers love.</h1>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <p class="text_para">
+                        <p class="text_para fontLatoRegular">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, excepturi. Quis quidem dolores vitae explicabo ab aliquid eos voluptatibus. Quod expedita laboriosam similique repellat omnis eius ipsum! Porro, consequuntur vel.
                         </p>
                     </div>
@@ -156,10 +163,10 @@
                         <i class="fa fa_icon fa-lightbulb-o" aria-hidden="true" style="background-color:#16A1B1"></i>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <h1>Bulid products that customers love.</h1>
+                        <h1 class="fontGraphikSemibold" >Bulid products that customers love.</h1>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <p class="text_para">
+                        <p class="text_para fontLatoRegular">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, excepturi. Quis quidem dolores vitae explicabo ab aliquid eos voluptatibus. Quod expedita laboriosam similique repellat omnis eius ipsum! Porro, consequuntur vel.
                         </p>
                     </div>
@@ -178,10 +185,10 @@
                         <i class="fa fa_icon fa-lightbulb-o" aria-hidden="true" style="background-color: #E39719;"></i>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <h1>Bulid products that customers love.</h1>
+                        <h1 class="fontGraphikSemibold">Bulid products that customers love.</h1>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <p class="text_para">
+                        <p class="text_para fontLatoRegular">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, excepturi. Quis quidem dolores vitae explicabo ab aliquid eos voluptatibus. Quod expedita laboriosam similique repellat omnis eius ipsum! Porro, consequuntur vel.
                         </p>
                     </div>
@@ -210,10 +217,10 @@
                         <i class="fa fa_icon fa-lightbulb-o" aria-hidden="true" style="background-color:#ED3593"></i>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <h1>Bulid products that customers love.</h1>
+                        <h1 class="fontGraphikSemibold">Bulid products that customers love.</h1>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <p class="text_para">
+                        <p class="text_para fontLatoRegular">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, excepturi. Quis quidem dolores vitae explicabo ab aliquid eos voluptatibus. Quod expedita laboriosam similique repellat omnis eius ipsum! Porro, consequuntur vel.
                         </p>
                     </div>
@@ -229,10 +236,10 @@
     <section class="our_secrets">
         <div class="container">
             <div class="text">
-                <h1 class="fontGraphikBold">
+                <h1 class="fontGraphikSemibold">
                         Our secrets.
                 </h1>
-                <p class="banner--text">
+                <p class="banner--text fontLatoRegular">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br/> tempor incididunt .
                 </p> 
             </div>
@@ -240,7 +247,7 @@
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
                     <div class="card">
                         <div class="card__body">
-                            <h5 class="card-title">Clean Code</h5>
+                            <h5 class="card-title fontGraphikSemibold">Clean Code</h5>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit dolor harum
                             </p>
@@ -250,7 +257,7 @@
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
                     <div class="card">
                         <div class="card__body">
-                            <h5 class="card-title">Tets driven Development</h5>
+                            <h5 class="card-title fontGraphikSemibold">Tets driven Development</h5>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit dolor harum
                             </p>
@@ -260,7 +267,7 @@
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
                     <div class="card">
                         <div class="card__body">
-                            <h5 class="card-title">Agile</h5>
+                            <h5 class="card-title fontGraphikSemibold">Agile</h5>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit dolor harum
                             </p>
@@ -270,7 +277,7 @@
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
                         <div class="card">
                         <div class="card__body">
-                            <h5 class="card-title">Ownership</h5>
+                            <h5 class="card-title fontGraphikSemibold">Ownership</h5>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit dolor harum
                             </p>
@@ -280,7 +287,7 @@
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
                     <div class="card">
                     <div class="card__body">
-                        <h5 class="card-title">Collaboration</h5>
+                        <h5 class="card-title fontGraphikSemibold">Collaboration</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit dolor harum
                         </p>
@@ -288,8 +295,9 @@
                     </div>
                 </div>
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
-                    <div class="card">
+                    <div class="card card_primary">
                     <div class="card__body">
+                            <a href="#!" class="">EXPLORE MORE</a>
                     </div>
                     </div>
                 </div>
