--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="first_section" style="height: 50vh;margin-bottom: 50vh;">
         <div class="container-fluid" style="padding: 0px;">
             <video autoplay loop style="max-width: 100%;height:100%;">
-                <source src="https://videos.ctfassets.net/xny2w179f4ki/624R5hsLvnQ36lRNjssvOB/5e49f2cc809333610c32f8b941761ce2/Homepage_Airplane_Guy_Working_1.mp4" type="video/mp4">
+                <source src="https://open-for-fs.s3.ap-south-1.amazonaws.com/test.mp4" type="video/mp4">
             </video>                      
         </div>
     </section>
