--- a/index.html
+++ b/index.html
@@ -305,6 +305,95 @@
             </div>
         </div>
     </section>
+    <section class="crayond_ceo">
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 about-crayond">
+                        <div class="row">
+                            <span class="fontGraphikLight details_of_crayond">&ldquo;</span>
+                            <p class="fontGraphikLight details_of_crayond">
+                                Crayon’d let us abstract the billing part and keep it separate from our 
+                                <span class="fontGraphikSemibold text_bold">working code base.</span>
+                                 Ever since we started using it. 
+                            </p>
+                            <span class="fontGraphikLight details_of_crayond">&rdquo;</span>
+                            <p class="fontGraphikSemibold name_of_writer">- John Snow, Co-Founder</p>
+                            <img src="./images/circle.png" />
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 images_ceo">
+                        <img src="./images/ceo.png" />
+                    </div>
+                </div>
+            </div>
+          </div>
+    </section>
+    <section class="next_billion">
+        <div class="container">
+            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
+                <button class="button fontLatoRegular">Let's get serious &nbsp <span>  </span></button>
+            </div>
+            <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
+                <h1 class="fontGraphikSemibold">What’s your next billion-<br/>dollar idea?</h1>
+            </div>
+            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
+                <button class="banner_button fontLatoBlack">SCREW IT, LET'S DO IT! &nbsp <span>  </span></button>
+            </div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
+                    <img src="./images/circle.png" width="100px"/>
+                </div>
+                <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2">
+                    <p class="fontGraphikSemibold">
+                        Company
+                    </p>
+                    <ul>
+                        <li>Who we are?</li>
+                        <li>Pricing</li>
+                        <li>Careers</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2">
+                    <p class="fontGraphikSemibold">
+                        Solutions
+                    </p>
+                    <ul>
+                        <li>Entrepreneur</li>
+                        <li>Startup Owner</li>
+                        <li>Enterprise</li>
+                        <li>SaaS</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2">
+                    <p class="fontGraphikSemibold">
+                      Resources
+                    </p>
+                    <ul>
+                        <li>Blog</li>
+                        <li>Case Studies</li>
+                        <li>FAQ</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2">
+                    <p class="fontGraphikSemibold">                    
+                      Products
+                    </p>
+                    <ul>
+                        <li>User Story Writer</li>
+                        <li>Mapper</li>
+                        <li>Builder</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 </body>
 <script src="./plugin/jquery.min.js"></script>
 
