--- a/index.html
+++ b/index.html
@@ -346,52 +346,81 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
-                    <img src="./images/circle.png" width="100px"/>
+                    <img src="./images/logo_crayond.png" width="115px"/>
+                    <p>© Crayon Digital Reach Pvt. Ltd.</p>
+                    <p>All rights reserved</p>
                 </div>
                 <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2">
-                    <p class="fontGraphikSemibold">
+                    <p class="fontGraphikSemibold footer_menu">
                         Company
                     </p>
                     <ul>
-                        <li>Who we are?</li>
-                        <li>Pricing</li>
-                        <li>Careers</li>
-                        <li>Contact</li>
+                        <li><span class="fontLatoRegular">Who we are?</span></li>
+                        <li><span class="fontLatoRegular">Pricing</span></li>
+                        <li><span class="fontLatoRegular">Careers</span></li>
+                        <li><span class="fontLatoRegular">Contact</span></li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2">
-                    <p class="fontGraphikSemibold">
+                    <p class="fontGraphikSemibold  footer_menu">
                         Solutions
                     </p>
                     <ul>
-                        <li>Entrepreneur</li>
-                        <li>Startup Owner</li>
-                        <li>Enterprise</li>
-                        <li>SaaS</li>
+                        <li><span class="fontLatoRegular">Entrepreneur</span></li>
+                        <li><span class="fontLatoRegular">Startup Owner</span></li>
+                        <li><span class="fontLatoRegular">Enterprise</span></li>
+                        <li><span class="fontLatoRegular">SaaS</span></li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2">
-                    <p class="fontGraphikSemibold">
+                    <p class="fontGraphikSemibold footer_menu">
                       Resources
                     </p>
                     <ul>
-                        <li>Blog</li>
-                        <li>Case Studies</li>
-                        <li>FAQ</li>
+                        <li><span class="fontLatoRegular">Blog</span></li>
+                        <li><span class="fontLatoRegular">Case Studies</span></li>
+                        <li><span class="fontLatoRegular">FAQ</span></li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2">
-                    <p class="fontGraphikSemibold">                    
+                    <p class="fontGraphikSemibold footer_menu">                    
                       Products
                     </p>
                     <ul>
-                        <li>User Story Writer</li>
-                        <li>Mapper</li>
-                        <li>Builder</li>
+                        <li><span class="fontLatoRegular">User Story Writer</span></li>
+                        <li><span class="fontLatoRegular">Mapper</span></li>
+                        <li><span class="fontLatoRegular">Builder</span></li>
                     </ul>
                 </div>
             </div>
         </div>
+    </section>
+    <section class="footer_social_media">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6" style="display: flex;">
+                      <p class="fontLatoBold footer_list"><span>Security</span></p>
+                      <p class="fontLatoBold footer_list"><span>Terms & Policies</span></p>
+                      <p class="fontLatoBold footer_list"><span>GDPR</span></p>
+                    </div>
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6" style="display: flex;justify-content: flex-end;">
+                       <samp class="social_icon">
+                            <i class="fa fa-linkedin " aria-hidden="true"></i>
+                       </samp>
+                       <samp class="social_icon">
+                            <i class="fa fa-facebook " aria-hidden="true"></i>
+                       </samp>
+                       <samp class="social_icon">
+                            <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                       </samp>
+                       <samp class="social_icon">
+                            <i class="fa fa-twitter " aria-hidden="true"></i>
+                       </samp>
+                    </div>
+                </div>
+            </div>           
+        </footer>
     </section>
     
 </body>
