--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Crayond'd</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="plugin/favicon.png">
+    <link rel="shortcut icon" href="./images/favicon_crayond.png">
 
     <!-- 4.0.0 bootstrap -->
     <link rel="stylesheet" href="./plugin/4.0.0_bootstrap.min.css">
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="img_section" style="margin: auto;">
-
+                            <img src="./images/ceo.png" />
                     </div>
                 </div>
             </div>
