added brand names

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#1D5591">
-    <title>Crayond'd</title>
+    <title>Crayon'd</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/favicon_crayond.png">
@@ -55,7 +55,12 @@
         </div>
     </section>
     <section class="other_brand">
-        <div class="container"></div>
+        <div class="container">
+            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 brands" >
+              <img src="./images/asgardia.png">
+              <img src="./images/asgardia.png">
+            </div>
+        </div>
     </section>
     <section class="who_you_are">
         <div class="container">
