--- a/index.html
+++ b/index.html
@@ -33,6 +33,33 @@
     <![endif]-->
 </head>
 <body>
+    <!-- Main header -->
+    <div class="header" id="navBar">
+       <div class="container">
+            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="row">
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-2 col-lg-2 col-xl-2 logo_area" >
+                        <a href="#default" class="logo">
+                            <img src="./images/logo_crayond.png" />
+                        </a>       
+                    </div>
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
+                        <span class="fontLatoRegular active">Who we are?</span>
+                        <span class="fontLatoRegular">Products</span>
+                        <span class="fontLatoRegular">Pricing</span>
+                        <span class="fontLatoRegular">Blogs</span>
+                        <span class="fontLatoRegular">Careers</span>
+                        <span class="fontLatoRegular">Contact</span>
+                    </div>
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-2 col-lg-2 col-xl-2 sign_btn">
+                         <button class="btn btn-outline-primary fontLatoBlack">SIGN IN</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end -->
+    <!-- background video -->
     <section class="first_section" style="height: 50vh;margin-bottom: 50vh;">
         <div class="container-fluid" style="padding: 0px;">
             <video autoplay loop style="max-width: 100%;height:100%;">
@@ -40,30 +67,38 @@
             </video>                      
         </div>
     </section>
+    <!-- end -->
+    <!-- main title -->
     <section class="first_section header_text">
         <div class="container">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_text_1 fontGraphikBold">
                 <p>Bring your <br /> Product Idea to Life</p>
             </div>
-            <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
-                -----------------------------------------------------------------------------------
-            </div> -->
+            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 Line-2">
+            </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_text_2 fontLatoRegular">
                 <p>We have starting founder and businesses to craft their ideas to <br />world-class products</p>
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner__button_div">
-                <button class="banner_button fontLatoBlack">SCREW IT, LET'S DO IT! &nbsp <span>  </span></button>
+                <button class="banner_button fontLatoBlack">SCREW IT, LET'S DO IT! &nbsp <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span></button>
             </div>
         </div>
     </section>
+    <!-- end -->
+    <!-- other_brand details -->
     <section class="other_brand">
         <div class="container">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 brands" >
+              <img src="./images/lighting.png">
               <img src="./images/asgardia.png">
-              <img src="./images/asgardia.png">
+              <img src="./images/utosia.png">
+              <img src="./images/utosia-2.png">
+              <img src="./images/solaytic.png">
             </div>
         </div>
     </section>
+    <!-- end -->
+    <!-- who_you_are -->
     <section class="who_you_are">
         <div class="container">
             <div class="text">
@@ -85,11 +120,11 @@
                                 Some quick example text to build on the card title
                                 and make up the bulk of the card's content.
                                 </p>
-                                <a href="#!" class="btn">EXPLORE</a>
+                                <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
                             </div>
                         </div>
                     </div>
-                    <div  data-aos="zoom-out" class="col-md-4 card-div">
+                    <div  data-aos="zoom-in" class="col-md-4 card-div">
                         <div class="card--">
                             <div class="card--body">
                                 <i class="fa fa_icon fa-archive" aria-hidden="true"></i>
@@ -98,7 +133,7 @@
                                 Some quick example text to build on the card title
                                 and make up the bulk of the card's content.
                                 </p>
-                                <a href="#!" class="btn">EXPLORE</a>
+                                <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -111,7 +146,7 @@
                                 Some quick example text to build on the card title
                                 and make up the bulk of the card's content.
                                 </p>
-                                <a href="#!" class="btn">EXPLORE</a>
+                                <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -119,6 +154,8 @@
             </div>
         </div>
     </section>
+    <!-- end -->
+    <!-- why_us -->
     <section class="why_us">
       <div class="container-fluid container_bg_section1">
         <div class="container">
@@ -146,12 +183,12 @@
                         </p>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <a href="#!" class="btn">EXPLORE</a>
+                        <a href="#!" class="btnn">EXPLORE &nbsp <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="img_section" style="margin: auto;">
-                            <img src="./images/ceo.png" />
+                    <div class="img_section Mascot_img" style="margin: auto;">
+                            <!-- <img src="./images/Mascot.jpg" /> -->
                     </div>
                 </div>
             </div>
@@ -161,8 +198,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="img_section">
-
+                    <div class="img_section" style="margin: auto;">
+                            <img src="./images/ceo.png" />
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -178,7 +215,7 @@
                         </p>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <a href="#!" class="btn">EXPLORE</a>
+                        <a href="#!" class="btnn">EXPLORE &nbsp <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
                     </div>
                 </div>
             </div>
@@ -200,11 +237,11 @@
                         </p>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <a href="#!" class="btn">EXPLORE</a>
+                        <a href="#!" class="btnn">EXPLORE &nbsp <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="img_section" style="margin: auto;">
+                    <div class="img_section Mascot_img" style="margin: auto;">
 
                     </div>
                 </div>
@@ -215,8 +252,8 @@
         <div class="container">                
             <div class="row">
                 <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
-                    <div class="img_section">
-
+                    <div class="img_section" style="margin: auto;">
+                            <img src="./images/ceo.png" />
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -232,7 +269,7 @@
                         </p>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <a href="#!" class="btn">EXPLORE</a>
+                        <a href="#!" class="btnn">EXPLORE &nbsp <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
                     </div>
                 </div>
             </div>
@@ -240,6 +277,8 @@
       </div>
      </div>
     </section>
+    <!-- end -->
+    <!-- our_secrets -->
     <section class="our_secrets">
         <div class="container">
             <div class="text">
@@ -254,6 +293,10 @@
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
                     <div class="card">
                         <div class="card__body">
+                            <!-- <i class="fa fa_icon fa-archive" aria-hidden="true"></i> -->
+                            <span class="fa_icon">
+                                <img src="./images/code.png" />
+                            </span>
                             <h5 class="card-title fontGraphikSemibold">Clean Code</h5>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit dolor harum
@@ -264,6 +307,7 @@
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
                     <div class="card">
                         <div class="card__body">
+                            <i class="fa fa_icon fa-archive" aria-hidden="true"></i>
                             <h5 class="card-title fontGraphikSemibold">Tets driven Development</h5>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit dolor harum
@@ -274,6 +318,7 @@
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
                     <div class="card">
                         <div class="card__body">
+                            <i class="fa fa_icon fa-archive" aria-hidden="true"></i>
                             <h5 class="card-title fontGraphikSemibold">Agile</h5>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit dolor harum
@@ -284,6 +329,7 @@
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
                         <div class="card">
                         <div class="card__body">
+                            <i class="fa fa_icon fa-archive" aria-hidden="true"></i>
                             <h5 class="card-title fontGraphikSemibold">Ownership</h5>
                             <p class="card-text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit dolor harum
@@ -294,6 +340,7 @@
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
                     <div class="card">
                     <div class="card__body">
+                        <i class="fa fa_icon fa-archive" aria-hidden="true"></i>
                         <h5 class="card-title fontGraphikSemibold">Collaboration</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit dolor harum
@@ -302,9 +349,9 @@
                     </div>
                 </div>
                 <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
-                    <div class="card card_primary">
+                    <div class="card card_primary" style="border-bottom-right-radius: .25rem;">
                     <div class="card__body">
-                            <a href="#!" class="">EXPLORE MORE</a>
+                            <a href="#!" class="">EXPLORE MORE &nbsp <span><i class="fa fa-angle-right" aria-hidden="true" style="font-size: 1.2rem;font-weight: 600;"></i></span></a>
                     </div>
                     </div>
                 </div>
@@ -312,19 +359,21 @@
             </div>
         </div>
     </section>
+    <!-- end -->
+    <!-- crayond_ceo -->
     <section class="crayond_ceo">
         <div class="container-fluid">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 about-crayond">
                         <div class="row">
-                            <span class="fontGraphikLight details_of_crayond">&ldquo;</span>
-                            <p class="fontGraphikLight details_of_crayond">
+                            <blockquote class="fontGraphikLight details_of_crayond">
+                                <!-- <span class="fontGraphikLight " style="font-size: 2.5rem;font-weight: 700;">&ldquo;</span> -->
                                 Crayon’d let us abstract the billing part and keep it separate from our 
                                 <span class="fontGraphikSemibold text_bold">working code base.</span>
                                  Ever since we started using it. 
-                            </p>
-                            <span class="fontGraphikLight details_of_crayond">&rdquo;</span>
+                                 <span class="fontGraphikLight " style="font-size: 2.5rem;font-weight: 700;">&rdquo;</span>
+                            </blockquote>
                             <p class="fontGraphikSemibold name_of_writer">- John Snow, Co-Founder</p>
                             <img src="./images/circle.png" />
                         </div>
@@ -336,8 +385,12 @@
             </div>
           </div>
     </section>
+    <!-- end -->
+    <!-- next_billion -->
     <section class="next_billion">
-        <div class="container">
+        <img src="./images/oval.png" class="ovel" />
+        <img src="./images/oval-copy-6.png" class="ovel-6" />
+        <div class="container billion">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
                 <button class="button fontLatoRegular">Let's get serious &nbsp <span>  </span></button>
             </div>
@@ -348,7 +401,11 @@
                 <button class="banner_button fontLatoBlack">SCREW IT, LET'S DO IT! &nbsp <span>  </span></button>
             </div>
         </div>
+        <img src="./images/path-3-copy.png" class="path-3" />
+        <img src="./images/path-3.png" class="path" />
     </section>
+    <!-- end -->
+    <!-- main footer -->
     <section class="footer">
         <div class="container">
             <div class="row">
@@ -402,6 +459,8 @@
             </div>
         </div>
     </section>
+    <!-- end -->
+    <!-- footer_social_media -->
     <section class="footer_social_media">
         <footer>
             <div class="container">
@@ -429,6 +488,7 @@
             </div>           
         </footer>
     </section>
+    <!-- end -->
     
 </body>
 <script src="./plugin/jquery.min.js"></script>
@@ -438,5 +498,12 @@
 <script src="./plugin/aos.js"></script>
 <script type="text/javascript">
     AOS.init();
+    $(window).scroll(function() {
+    if ($(window).scrollTop() > 10) {
+        $('#navBar').addClass('floatingNav');
+    } else {
+        $('#navBar').removeClass('floatingNav');
+    }
+    });
 </script>
 </html>
