added brands name

--- a/index.html
+++ b/index.html
@@ -87,13 +87,20 @@
     <!-- end -->
     <!-- other_brand details -->
     <section class="other_brand">
-        <div class="container">
-            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 brands" >
-              <img src="./images/lighting.png">
-              <img src="./images/asgardia.png">
-              <img src="./images/utosia.png">
-              <img src="./images/utosia-2.png">
-              <img src="./images/solaytic.png">
+        <div class="container-fluid" style="padding: 0;">
+            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 brands" style="padding: 0;" >
+            <marquee behavior="scroll" direction="left">
+                <img class="brands_logos" src="./images/lighting.png">
+                <img class="brands_logos" src="./images/asgardia.png">
+                <img class="brands_logos" src="./images/utosia.png">
+                <img class="brands_logos" src="./images/utosia-2.png">
+                <img class="brands_logos" src="./images/solaytic.png">
+                <img class="brands_logos" src="./images/lighting.png">
+                <img class="brands_logos" src="./images/asgardia.png">
+                <img class="brands_logos" src="./images/utosia.png">
+                <img class="brands_logos" src="./images/utosia-2.png">
+                <img class="brands_logos" src="./images/solaytic.png">
+            </marquee>
             </div>
         </div>
     </section>
