mobile responce finish issues

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                             <!-- <a href="#!" class="btnn">EXPLORE &nbsp <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a> -->
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img">
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
                             <img src="./images/ceo.png" />
                         </div>
