mobile responces fix

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="theme-color" content="#1D5591">
+    <meta name="theme-color" content="#334ac0">
     <title>Crayon'd</title>
 
     <!-- favicon -->
@@ -355,10 +355,10 @@
                             <span class="fa_icon Oval_code">
                                 <img src="./images/code.png" />
                             </span>
-                            <h5 class="card-title fontGraphikSemibold">Clean Code</h5>
+                            <p class="card-title fontGraphikSemibold">Clean Code</p>
                             <p class="card-text fontLatoRegular">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit
-                                dolor harum
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit, sed do elit eiusmod incididunt  tempor 
                             </p>
                         </div>
                     </div>
@@ -369,10 +369,10 @@
                             <span class="fa_icon Oval_pro">
                                 <img src="./images/programming.svg" />
                             </span>
-                            <h5 class="card-title fontGraphikSemibold">Tets driven Development</h5>
+                            <p class="card-title fontGraphikSemibold">Tets driven Development</p>
                             <p class="card-text fontLatoRegular">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit
-                                dolor harum
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing elit, sed do elit eiusmod incididunt  tempor
                             </p>
                         </div>
                     </div>
@@ -383,10 +383,9 @@
                             <span class="fa_icon Oval_flash">
                                 <img src="./images/shape.svg" />
                             </span>
-                            <h5 class="card-title fontGraphikSemibold">Agile</h5>
+                            <p class="card-title fontGraphikSemibold">Agile</p>
                             <p class="card-text fontLatoRegular">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit
-                                dolor harum
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do elit eiusmod incididunt tempor
                             </p>
                         </div>
                     </div>
@@ -397,10 +396,9 @@
                             <span class="fa_icon Oval_crown">
                                 <img src="./images/crown-4.svg" />
                             </span>
-                            <h5 class="card-title fontGraphikSemibold">Ownership</h5>
+                            <p class="card-title fontGraphikSemibold">Ownership</p>
                             <p class="card-text fontLatoRegular">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit
-                                dolor harum
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do elit eiusmod incididunt tempor
                             </p>
                         </div>
                     </div>
@@ -411,10 +409,9 @@
                             <span class="fa_icon Oval_group_join">
                                 <img src="./images/group_jon.svg" />
                             </span>
-                            <h5 class="card-title fontGraphikSemibold">Collaboration</h5>
+                            <p class="card-title fontGraphikSemibold">Collaboration</p>
                             <p class="card-text fontLatoRegular">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit
-                                dolor harum
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do elit eiusmod incididunt tempor
                             </p>
                         </div>
                     </div>
@@ -425,10 +422,9 @@
                                 <span class="fa_icon Oval_group_join">
                                     <img src="./images/group_jon.svg" />
                                 </span>
-                                <h5 class="card-title fontGraphikSemibold">Collaboration</h5>
+                                <p class="card-title fontGraphikSemibold">Collaboration</p>
                                 <p class="card-text fontLatoRegular">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae assumenda impedit
-                                    dolor harum
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do elit eiusmod incididunt tempor
                                 </p>
                             </div>
                         </div>
@@ -504,7 +500,7 @@
                     <p>© Crayon Digital Reach Pvt. Ltd.</p>
                     <p>All rights reserved</p>
                 </div>
-                <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2">
                     <p class="fontGraphikSemibold footer_menu">
                         Company
                     </p>
@@ -515,7 +511,7 @@
                         <li><span class="fontLatoRegular">Contact</span></li>
                     </ul>
                 </div>
-                <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2">
                     <p class="fontGraphikSemibold  footer_menu">
                         Solutions
                     </p>
@@ -526,7 +522,7 @@
                         <li><span class="fontLatoRegular">SaaS</span></li>
                     </ul>
                 </div>
-                <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2">
                     <p class="fontGraphikSemibold footer_menu">
                         Resources
                     </p>
@@ -536,7 +532,7 @@
                         <li><span class="fontLatoRegular">FAQ</span></li>
                     </ul>
                 </div>
-                <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2">
                     <p class="fontGraphikSemibold footer_menu">
                         Products
                     </p>
