mobile responces fix

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
         <div class="container" style="padding: 0;">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 brands" style="padding: 0;">
                 <div class="branding_list">
-                    <img class="brands_logos" src="./images/Benz.svg" style="width: 150px">
-                    <img class="brands_logos" src="./images/Emtax.svg" style="width: 124px;">
-                    <img class="brands_logos" src="./images/Zibahub.svg" style="width: 80px;">
-                    <img class="brands_logos" src="./images/pyt-logo.svg" style="width: 160px">
-                    <img class="brands_logos" src="./images/Pinecrow.svg" style="width: 140px;">
+                    <img class="brands_logos img1" src="./images/Benz.svg" style="width: 150px">
+                    <img class="brands_logos img2" src="./images/Emtax.svg" style="width: 124px;">
+                    <img class="brands_logos img3" src="./images/Zibahub.svg" style="width: 80px;">
+                    <img class="brands_logos img4" src="./images/pyt-logo.svg" style="width: 160px">
+                    <img class="brands_logos img5" src="./images/Pinecrow.svg" style="width: 140px;">
                 </div>   
                 <marquee behavior="scroll" direction="left" style="display: none;">
                     <img class="brands_logos" src="./images/Benz.svg" style="width: 150px">
