--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
                     <img src="./images/Border-02.svg" class="Line-1" />
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_text_2 fontLatoRegular">
-                <p>We have starting founder and businesses to craft their ideas to <br />world-class products</p>
+                <p>
+                     We help startup founders and businesses craft their ideas into <br/> world-class products
+                </p>
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner__button_div">
                 <button class="banner_button fontLatoBlack">SCREW IT, LET'S DO IT! &nbsp <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span></button>
@@ -119,9 +121,9 @@
                     Who you are?
                 </h1>
                 <img src="./images/line-2.png" />
-                <p class="banner--text fontLatoRegular">
+                <!-- <p class="banner--text fontLatoRegular">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit illum aperiam.<br /> ea exercitationem .
-                </p>
+                </p> -->
             </div>
             <div class="card_div">
                 <div class="row">
@@ -132,10 +134,9 @@
                                     <!-- <i class="fa fa_icon fa-lightbulb-o" aria-hidden="true"></i> -->
                                     <img src="./images/light-bulb.svg"/>
                                 </span>
-                                <h2 class="card--head fontGraphikSemibold">An Aspiring <br />enterpreneur</h2>
+                                <h2 class="card--head fontGraphikSemibold">An aspiring<br/> entrepreneur?</h2>
                                 <p class="card--text fontLatoRegular">
-                                    Some quick example text to build on the card title
-                                    and make up the bulk of the card's content.
+                                    If you have an awesome product idea, we can build you a world-class product guaranteed to fit your dream.
                                 </p>
                                 <!-- <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a> -->
                             </div>
@@ -148,10 +149,9 @@
                                     <!-- <i class="fa fa_icon fa-lightbulb-o" aria-hidden="true"></i> -->
                                     <img src="./images/send-mail.svg"/>
                                 </span>
-                                <h2 class="card--head fontGraphikSemibold">A Startup <br />Owner</h2>
+                                <h2 class="card--head fontGraphikSemibold">A startup<br/> owner?</h2>
                                 <p class="card--text fontLatoRegular">
-                                    Some quick example text to build on the card title
-                                    and make up the bulk of the card's content.
+                                    If you’re looking for ways to improve an existing product, our cutting edge technology can set you apart.
                                 </p>
                                 <!-- <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a> -->
                             </div>
@@ -164,10 +164,9 @@
                                     <!-- <i class="fa fa_icon fa-lightbulb-o" aria-hidden="true"></i> -->
                                     <img src="./images/building-front.svg"/>
                                 </span>
-                                <h2 class="card--head fontGraphikSemibold">An Established <br />enterprise</h2>
+                                <h2 class="card--head fontGraphikSemibold">An established<br/> enterprise?</h2>
                                 <p class="card--text fontLatoRegular">
-                                    Some quick example text to build on the card title
-                                    and make up the bulk of the card's content.
+                                        Want to focus on improving existing products and reaching unexplored markets? Leave your next product to us!
                                 </p>
                                 <!-- <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a> -->
                             </div>
@@ -202,14 +201,14 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">Bulid products that customers love.</h1>
+                            <h1 class="fontGraphikSemibold">Human-centered design, for products your customers love</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                         <img src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation, Minim veniam.
+                                Our product development process is highly interactive and designed with user behavior in mind. We take pride in building products that delight customers every step of the way.
                             </p>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
@@ -239,14 +238,14 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">Modern engineering, build the right product.</h1>
+                            <h1 class="fontGraphikSemibold">World-class products, built with modern engineering</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                              <img src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation, Minim veniam.
+                                Our cutting edge technology ensures your product looks and works great. Go ahead and impress customers with products that are scalable, flexible, and robust.
                             </p>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
@@ -271,14 +270,14 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">Modern engineering, build the right product.</h1>
+                            <h1 class="fontGraphikSemibold">Launch early, reach your customers first</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                                 <img src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation, Minim veniam.
+                                Rapid developmental frameworks power every milestone of our product roadmap. A shorter go-to-market time means getting ahead of the competition and staying on top!
                             </p>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
@@ -308,16 +307,14 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">Bulid products that customers love.</h1>
+                            <h1 class="fontGraphikSemibold">And finally, no pricing surprises.</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                                 <img src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, excepturi. Quis
-                                quidem dolores vitae explicabo ab aliquid eos voluptatibus. Quod expedita laboriosam
-                                similique repellat omnis eius ipsum! Porro, consequuntur vel.
+                                    Our pricing is pretty simple. We believe in fixed costs and happy customers. With every milestone we reach, you pay us. You decide on the when, where and how before we start building.
                             </p>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
