--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="row">
                     <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 logo_area">
-                        <a href="#default" class="logo">
+                        <a href="#" class="logo">
                             <img src="./images/logo_crayond.png" />
                         </a>
                     </div>
@@ -228,7 +228,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/ceo.png" />
+                            <img src="./images/1 NEW.png" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
